--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -82,9 +82,9 @@
         </div>
     </div>    
     {% endif %}
-    <div data-ui-role="swipemask" class="mask"></div>
+    <!-- <div data-ui-role="swipemask" class="mask"></div>
     <div class="xui-two-dimension">
         <img src="{{ request.webapp_owner_info.qrcode_img }}" alt="">
-    </div>
+    </div> -->
 </div>
 {% endwith %}
