--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -86,9 +86,9 @@
 	</div>    
     <div class="xui-hide" data-ui-role="bottomNav"></div>
     {% endif %}
-    <div data-ui-role="swipemask" class="mask"></div>
+    <!-- <div data-ui-role="swipemask" class="mask"></div>
     <div class="xui-two-dimension">
         <img src="{{ current_auth_qrcode_img }}">
-    </div>
+    </div> -->
 </div>
 {% endifequal %}
