--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
@@ -59,7 +59,7 @@
         <input href="javascript:void(0);" type="button" class="xui-btn xui-btn-danger xa-submit" value="保存并使用">
       </div>
     </div>
-    <div data-ui-role="swipemask" class="mask">
+    <div data-ui-role="swipemask" class="xa-loadingMask" data-background="rgba(0, 0, 0, 0)">
       <div class="xui-loading">
         <div class="xui-loading-container container1">
           <div class="circle1"></div>
