[X-Ray][f_mall_6096]click

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -204,7 +204,7 @@
                     }
                 });
                 $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
-                    $(this).swipeMask('hide');
+                    $('.xa-qrcodeMask').swipeMask('hide');
                 });
             });
             {# 百度统计代码开始 #}
