--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -258,7 +258,7 @@
             });
 
             $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
-                $(this).swipeMask('hide');
+                $('.xa-qrcodeMask').swipeMask('hide');
             });
         });
 
