[X-Ray][f_mall_6096]test

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -257,9 +257,9 @@
                 }
             });
 
-            $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
-                $('.xa-qrcodeMask').swipeMask('hide');
-            });
+            // $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
+            //     $('.xa-qrcodeMask').swipeMask('hide');
+            // });
         });
 
         </script>
