--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -203,9 +203,9 @@
                         }
                     }
                 });
-                $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
-                    $('.xa-qrcodeMask').swipeMask('hide');
-                });
+                // $('body').delegate('.xa-qrcodeMask', 'click', function(event) {
+                //     $('.xa-qrcodeMask').swipeMask('hide');
+                // });
             });
             {# 百度统计代码开始 #}
             var _hmt = _hmt || [];
