--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -59,9 +59,9 @@
         <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/validate.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/common.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/webapp_utils.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/inputable_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_order_page.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/webapp/localStorage_helper.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/shopping_cart_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/buy_custom_model_product_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_address_page.js"></script>
@@ -226,6 +226,7 @@
 
         <script>
             webStorageProbe();
+            initSessionStorage();
         </script>
 
         {% block js %}{% endblock %}
