--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
@@ -85,10 +85,6 @@
   {% endblock %}
 {% block js %}
   <script type="text/javascript">
-    var redirectUrlQueryString = getRedirectUrlQueryString();
-    if(redirectUrlQueryString.indexOf('?')>=0){
-        redirectUrlQueryString = redirectUrlQueryString.split("?")[1];
-    }
     var $deleteElem = $('.xa-delete');
     var woid = getWoid();
     // $(function() {
@@ -97,14 +93,13 @@
     //绑定初始化数据
     var page = new W.page.EditAddressPage({
         el: '.xui-address-page',
-        redirectUrlQueryString: redirectUrlQueryString
     });
     var height = screen.height;
     var width = screen.width;
 
     var ship_id = getParam('id');
     if (getParam('model') == 'address' && getParam('action') == 'edit'){
-        var ship_infos = JSON.parse(localStorage.ship_infos);
+        var ship_infos = JSON.parse(sessionStorage.ship_infos);
         var ship_info = ship_infos[ship_id];
 
         $deleteElem.show();
