--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -152,7 +152,7 @@
             </a>
         </div>
        <div class="xui-section-item">
-            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=address&action=list" class="em95">
+            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=address&action=list" class="em95" onclick="setMallShipfromUrl();">
                 <span class="xui-icon-tool mr5 xui-icon-tool-address"></span>
                 地址管理
                 <span class="xui-inner-info">管理收货地址</span>
@@ -181,7 +181,6 @@
 {% block js %}
 
 <script>
-initShipInofs();
 $(document).ready(function(){
     // $('.xa-clickPointCard').click(function(event){
     //     // event.stopPropagation();
