[X-Ray][b_mall_6169]1、解决领优惠券非会员二维码弹层不显示 2、解决订单列表非会员tab被遮挡问题 3、尝试解决线上分享红包非会员黄条样式首次加载无样式、显示二维码问题

--- a/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
+++ b/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
@@ -4,7 +4,7 @@
 <link type="text/css" rel="stylesheet" href="/markettools_static/share_red_envelope/css/share_red_envelope.css">
 {% endblock %}
 {% block content-panel %}
-<div class="xui-wrap">
+<div class="xui-wrap xa-page">
   <section class="xui-content">
     {% if coupon_rule %}
     <div class="xui-env">
