--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content-panel %}
-<div class="xui-orderListPage xui-page wui-swiper">
+<div class="xui-orderListPage xui-page wui-swiper xa-page">
     <div class="wui-swiper-tabs">
         <a href="javascript:void(0)" status="-1" class="wui-inner-active"><span class="wui-inner-tabTitle">全部订单</span><i></i></a>
         <a href="javascript:void(0)" status="0"><span class="wui-inner-tabTitle">待支付</span><i></i></a>
