--- a/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
+++ b/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
@@ -76,13 +76,13 @@ html,body{
         if('{{ is_subscribed }}' == 'True'){
             window.location.href = "./?module=market_tool:coupon&model=usage&action=get&workspace_id=market_tool:coupon&webapp_owner_id={{request.webapp_owner_id}}&project_id=0"
         }else{
-            $('.xa-guideAttention').click();
+            $('.wa-guideAttention').click();
         }
 	});
 
 	$('.xa-getCoupon').click(function(){
         if('{{user.is_from_weixin}}'!='True'){
-            $('.xa-guideAttention').click();
+            $('.wa-guideAttention').click();
             return;
         }
 		W.getApi().call({
