[f_mall_6125][朱天琦]update

--- a/weapp/apps/customerized_apps/weshop/templates/mall/custom_model_product_detail.html
+++ b/weapp/apps/customerized_apps/weshop/templates/mall/custom_model_product_detail.html
@@ -314,7 +314,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 {% block js %}
 <script type="text/javascript">
     $('.xa-buyBtn').click(function(event){
-        var url = $(event.currentTarget).attr('data-href');
+        var url = $(event.currentTarget).data('href');
         checkShipInfosBeforeBuy(url);
     });
     // var postageFactor = $.parseJSON('{{postage_factor|safe}}');
