--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -152,7 +152,7 @@
             </a>
         </div>
        <div class="xui-section-item">
-            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=address&action=list" class="em95" onclick="setMallShipfromUrl();">
+            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=address&action=list" class="em95">
                 <span class="xui-icon-tool mr5 xui-icon-tool-address"></span>
                 地址管理
                 <span class="xui-inner-info">管理收货地址</span>
